chore: large cleanup and updates
Summary: 234 files changed, 1087 insertions(+), 28715 deletions(-)

Changes by status: 4 added, 83 modified, 147 deleted

Top areas: src/test/functional (130), src/main/java (68), src/test/java (26), src/main/resources (3)

Added:
- src/main/java/uk/gov/hmcts/ethos/replacement/docmosis/helpers/JurisdictionHelper.java
- src/main/resources/sqlscripts/setup-ethos-db-cftlib.sh
- src/test/java/uk/gov/hmcts/ethos/replacement/docmosis/helpers/JurisdictionHelperTest.java
- src/test/java/uk/gov/hmcts/ethos/replacement/docmosis/helpers/MigrateToReformHelperTest.java.backup